; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_gwsocket.c_broadcast_holder.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_gwsocket.c_broadcast_holder.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @broadcast_holder(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  store i8* null, i8** %7, align 8
  store i8* null, i8** %8, align 8
  %9 = call i8* @calloc(i32 12, i32 1)
  store i8* %9, i8** %7, align 8
  %10 = load i8*, i8** %7, align 8
  store i8* %10, i8** %8, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = call i32 @pack_uint32(i8* %11, i32 0)
  %13 = load i8*, i8** %8, align 8
  %14 = sext i32 %12 to i64
  %15 = getelementptr inbounds i8, i8* %13, i64 %14
  store i8* %15, i8** %8, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = call i32 @pack_uint32(i8* %16, i32 1)
  %18 = load i8*, i8** %8, align 8
  %19 = sext i32 %17 to i64
  %20 = getelementptr inbounds i8, i8* %18, i64 %19
  store i8* %20, i8** %8, align 8
  %21 = load i8*, i8** %8, align 8
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @pack_uint32(i8* %21, i32 %22)
  %24 = load i8*, i8** %8, align 8
  %25 = sext i32 %23 to i64
  %26 = getelementptr inbounds i8, i8* %24, i64 %25
  store i8* %26, i8** %8, align 8
  %27 = load i32, i32* %4, align 4
  %28 = load i8*, i8** %7, align 8
  %29 = call i32 @write_holder(i32 %27, i8* %28, i32 12)
  %30 = load i32, i32* %4, align 4
  %31 = load i8*, i8** %5, align 8
  %32 = load i32, i32* %6, align 4
  %33 = call i32 @write_holder(i32 %30, i8* %31, i32 %32)
  %34 = load i8*, i8** %7, align 8
  %35 = call i32 @free(i8* %34)
  ret i32 0
}

declare dso_local i8* @calloc(i32, i32) #1

declare dso_local i32 @pack_uint32(i8*, i32) #1

declare dso_local i32 @write_holder(i32, i8*, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
